<resources>
    <string name="app_name">BiliPlayer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_search">搜索</string>
    <string name="action_settings">搜索</string>
    <string name="sliding_shouye">首页</string>
    <string name="sliding_shoucang">收藏</string>
    <string name="sliding_history">历史记录</string>
    <string name="sliding_setting">设置</string>
    <string name="sliding_about">关于</string>
    <string name="sliding_help">帮助</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <string name="title_activity_cpu_message">cpuMessage</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_net_work">NetWorkActivity</string>
    <string name="title_activity_offline">offlineActivity</string>
    <string name="title_activity_personal_data">PersonalDataActivity</string>


    <string name="title_activity_activity_setting">设置</string>
    <string name="title_activity_activity_help">帮助</string>
    <string name="parsersetting">解码设置</string>
    <string name="dansetting">弹幕设置</string>
    <string name="downsetting">离线设置</string>
    <string name="outher">其他</string>
    <string name="cleanpicture">清空图片缓存</string>
    <string name="search">清空搜索记录</string>
    <string name="setting">恢复初始设置</string>
    <string name="help">帮助</string>
    <string name="highsetting">高级</string>
    <string name="play">播放</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="key">关键词/用户屏蔽</string>
    <string name="model">屏蔽模式</string>
    <string name="tanmu_yinqing">弹幕引擎</string>
    <string name="tanmu_select">弹幕选项</string>
    <string name="outline">离线设置</string>
    <string name="tanmusetting">弹幕设置</string>
    <string name="parser">解码设置</string>
    <string name="title_activity_recycler">RecyclerActivity</string>
    <string name="title_activity_pulltoreflash">Pulltoreflash</string>
    <string name="title_activity_share_sdk">ShareSDKActivity</string>
    <string name="title_activity_hide">HideActivity</string>
    <string name="action_change_day">白天</string>
    <string name="action_change_night">夜晚</string>

    <!-- Strings related to login -->
    <string name="userName">手机号</string>
    <string name="password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
